--- a/book-service.properties
+++ b/book-service.properties
@@ -1,4 +1,5 @@
 server.port=8081
+spring.application.name=book-service
 
 # eureka server url
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
