--- a/apibook-gateway.properties
+++ b/apibook-gateway.properties
@@ -1,6 +1,6 @@
 server.port=8762
 spring.application.name=apibook-gateway
-eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+eureka.client.service-url.default-zone=${DISCOVERY_SERVER_URL:http://localhost:8761/eureka}
 
 #zuul.prefix=/api
 
