--- a/auth-service.properties
+++ b/auth-service.properties
@@ -2,7 +2,7 @@ server.port=8082
 spring.application.name=auth-service
 
 # eureka server url
-eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.client.service-url.default-zone=${DISCOVERY_SERVER_URL:http://localhost:8761/eureka}
 
 #admin-server
 spring.boot.admin.client.url=http://localhost:9092
