--- a/auth-service.properties
+++ b/auth-service.properties
@@ -5,7 +5,7 @@ spring.application.name=auth-service
 eureka.client.service-url.default-zone=${DISCOVERY_SERVER_URL:http://localhost:8761/eureka}
 
 #admin-server
-spring.boot.admin.client.url=http://localhost:9092
+spring.boot.admin.client.url=${ADMIN_SERVER_URL:http://localhost:9092}
 management.endpoints.web.exposure.include=*
 
 #Required for this application to connect to SBA
