--- a/author-service.properties
+++ b/author-service.properties
@@ -2,10 +2,10 @@ server.port=8080
 spring.application.name=author-service
 
 # eureka server url
-eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.client.service-url.default-zone=${DISCOVERY_SERVER_URL:http://localhost:8761/eureka}
 
 #admin-server
-spring.boot.admin.client.url=http://localhost:9092
+spring.boot.admin.client.url=${ADMIN_SERVER_URL:http://localhost:9092}
 management.endpoints.web.exposure.include=*
 
 #Required for this application to connect to SBA
