--- a/apibook-gateway.properties
+++ b/apibook-gateway.properties
@@ -1,4 +1,4 @@
-server.port=8762
+server.port=${PORT:8080}
 spring.application.name=apibook-gateway
 eureka.client.service-url.default-zone=${DISCOVERY_SERVER_URL:http://localhost:8761/eureka}
 
