--- a/apibook-gateway.properties
+++ b/apibook-gateway.properties
@@ -1,7 +1,7 @@
 server.port=${PORT:8080}
 spring.application.name=apibook-gateway
 #eureka.client.service-url.default-zone=${DISCOVERY_SERVER_URL:http://localhost:8761/eureka}
-eureka.client.service-url.default-zone=http://discoveryServer:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://discoveryServer:8761/eureka
 
 #zuul.prefix=/api
 
