--- a/author-service.properties
+++ b/author-service.properties
@@ -2,7 +2,7 @@ server.port=8080
 spring.application.name=author-service
 
 # eureka server url
-eureka.client.service-url.default-zone=${DISCOVERY_SERVER_URL:http://localhost:8761/eureka}
+eureka.client.serviceUrl.defaultZone=${DISCOVERY_SERVER_URL:http://localhost:8761/eureka}
 
 #admin-server
 spring.boot.admin.client.url=${ADMIN_SERVER_URL:http://localhost:9092}
