--- a/author-service.properties
+++ b/author-service.properties
@@ -21,8 +21,8 @@ spring.boot.admin.client.instance.metadata.user.name= ${spring.security.user.nam
 spring.boot.admin.client.instance.metadata.user.password=${spring.security.user.password}
 
 #mongodb
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=29999
+spring.data.mongodb.host=mongodb
+spring.data.mongodb.port=27017
 spring.data.mongodb.database=api-books
 
 #logging
